<resources>

    <string name="app_name">broodParts</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">broodParts</string>
        <!-- CPU Settings strings -->
    <string name="cpu_settings_title">CPU settings</string>
    <string name="cpu_title">broodParts</string>
    <string name="cpu_summary">Governor and clock settings</string>
    <string name="govtweak_title">CPU Governor Tweaks</string>
    <string name="govtweak_sum">Enable or disable CPU governors tweaks</string>
    <string name="vmtweak_title">VM (Dalvik) Tweaks</string>
    <string name="vmtweak_sum">Enable or disable Dalvik specific tweaks</string>
    <string name="density_title">Resolution (Density)</string>
    <string name="density_sum">Change the phones resolution, default is 240 (480x800)</string>  
    <string name="iotweak_title">I/O Scheduler Tweaks</string>
    <string name="iotweak_sum">Enable or disable I/O scheduler tweaks</string>
    <string name="clean_title">Cleaning your phone</string>
    <string name="dalvik_title">Clear Dalvik Cache</string>      
    <string name="hardreset_str">Hard Reset</string>
    <string name="hardreset_sum">Wipe /data and /cache, this will completely reset all user settings and apps</string>   
    <string name="dalvik_sum">Clear Dalvik Cache of /cache and /data</string>
    <string name="aio_title">Automated Cleaner</string>      
    <string name="aio_sum">Clean (dalvik)cache, zipalign, defragment, reboot </string>
    <string name="nettweak_title">Network Tweaks</string>
    <string name="nettweak_sum">Enable or disable Network (ipv4) tweaks</string>
    <string name="hosts_title">Update hosts file</string>
    <string name="hosts_sum">Update to the latest no ads hosts file to disable ads</string>
    <string name="cpu_governors_title">Available governors</string>
    <string name="cpu_governors_summary">List of available governors\nCurrently selected: %S</string>
    <string name="cpu_min_freq_title">Min CPU frequency</string>
    <string name="cpu_min_freq_summary">Minimum CPU frequency\nCurrently: %s</string>
    <string name="cpu_max_freq_title">Max CPU frequency</string>
    <string name="adb_notify">ADB Notification Icon</string>
    <string name="adb_notify_summary">Show ADB Notification icon in Statusbar</string>
    <string name="str_other_settings">Other Settings</string>
    <string name="str_maintenance">Phone Maintenance</string>
    <string name="str_tweaks">Specific Tweaks</string>
    <string name="cpu_max_freq_summary">Maximum CPU frequency\nCurrently: %s</string>
    <string name="io_set_summary">Select IO Scheduler\nCurrently: %s</string>
    <string name="readahead_summary">Select SDCard Cache Size:\nCurrently: %s</string>
    <string name="awakegov">Select awake governor </string>
    <string name="sleepgov">Select sleep governor</string>
    <string name="awakeminspeed">Minimal CPU frequency while awake</string>
    <string name="awakemaxspeed">Maximal CPU frequency while awake</string>
    <string name="sleepminspeed">Minimal CPU frequency while sleeping</string>
    <string name="maxspeedsleep">Maximal CPU frequency while sleeping</string>
    <string name="iosched">Select I/O Scheduler</string>
    <string name="set">Set CPU Settings</string>
    <string name="scheduler">Set I/O Scheduler</string>
    <string name="str_cpu_settings">CPU Settings</string>
    <string name="str_io_sched">I/O Settings</string>
    <string name="gps_lang_summary">Choose you preferred GPS localization</string>
    <string name="str_ram_settings">Memory Settings</string>
    <string name="clearram_str">Clear RAM cache now!</string>
    <string name="zipalign_str">Zipalign APKS</string>
    <string name="zipalign_strsum">Zipalign APKS for better performance</string>
    <string name="vacuum_str">Defragment Databases</string>
    <string name="vacuum_strsum">Defragment the phones databases for better performance</string>
    <string name="app_label">broodParts</string>
    <string name="device_info_title">Battery Info</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="title_battery_information">Battery information</string>
    <string name="summary_battery_information">Current battery status information</string>
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    <string name="general_title">General</string>
    <string name="applications_title">Applications</string>
    <string name="str_read_ahead">ReadAhead KB</string>
    <string name="str_kernel_settings">Choose a kernel version to install</string>
    <string name="str_oc">broodKernel v3.3 OC</string>
    <string name="str_ocuv">broodKernel v3.3 OC/UV</string>
    <string name="str_nonoc">broodKernel v3.3 NonOC</string>
    <string name="str_nonocuv">broodKernel v3.3 NonOC/UV</string>
    <string name="str_ocsum">Install broodKernel v3.3 with overclock support</string>
    <string name="str_ocuvsum">Install broodKernel v3.3 with overclock and undervolting support</string>
    <string name="str_nonocsum">Install broodKernel v3.3</string>
    <string name="str_nonocuvsum">Install broodKernel v3.3 with undervolting support</string>
    
</resources>
